--- a/global.css
+++ b/global.css
@@ -33,6 +33,12 @@
   }
   
   .container {
+    max-width: 950px;
+    margin: 0 auto;
+    padding: 25px;
+  }
+
+  .container-main {
     max-width: 1280px;
     margin: 0 auto;
     padding: 25px;
