--- a/Smart Alozie/style.css
+++ b/Smart Alozie/style.css
@@ -1,15 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap");
 
+@font-face {
+  font-family: grifter;
+  src: url(./GRIFTER\ Bold\ 700.otf);
+}
+@font-face {
+  font-family: gilory-extra;
+  src: url(FontsFree-Net-Gilroy-ExtraBold.ttf);
+}
+@font-face {
+  font-family: gilory;
+  src: url(gilroy-regular.ttf);
+}
+@font-face {
+  font-family: gilory-semibold;
+  src: url(gilroy-semibold.ttf);
+}
 
-iframe#youtubeFrame {
-    width: 100%;
-    height: 710px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: grifter;
 }
 
+.main-div {
+  background-image: url(herobgimg.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: auto;
+  border-bottom-right-radius: 150px;
+  border-bottom-left-radius: 150px;
+}
 
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 25px;
+}
 
 .header {
   display: flex;
@@ -35,56 +67,16 @@ body {
   font-size: 18px;
   font-weight: 400;
 }
-.navlinks h4 a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 16px;
-  font-family: gilory;
-  position: relative;
-  transition: color 0.3s ease-in-out;
-}
-
-.navlinks h4 a::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  bottom: -4px;
-  width: 0%;
-  height: 2px;
-  background: #ff9f00;
-  transition: all 0.3s ease-in-out;
-  transform: translateX(-50%);
-}
-
-.navlinks h4 a:hover {
-  color: #ff9f00;
-}
-
-.navlinks h4 a:hover::after {
-  width: 100%;
-}
-
 
 .header-button a {
-  padding: 14px;
+  padding: 18px;
   border-radius: 70px;
   background: #ff9f00;
   text-decoration: none;
   color: #fff;
-  font-size: 16px;
+  font-size: 18px;
   font-family: gilory;
-  border: 1px solid #ff9f00;
-  transition: all 0.3s ease-in-out;
-  display: inline-block;
 }
-
-.header-button a:hover {
-  background: transparent;
-  color: #ff9f00;
-  transform: scale(1.05);
-  box-shadow: 0px 4px 10px rgba(255, 159, 0, 0.5);
-}
-
 .header-buttons a {
   padding: 18px;
   border-radius: 70px;
@@ -93,15 +85,7 @@ body {
   color: #fff;
   font-size: 18px;
   font-family: gilory;
-  border: 1px solid #ff9f00;
 }
-.header-buttons a:hover {
-  background: transparent;
-  color: #ff9f00;
-  transform: scale(1.05);
-  box-shadow: 0px 4px 10px rgba(255, 159, 0, 0.5);
-}
-
 
 .hero-section {
   display: flex;
@@ -115,10 +99,9 @@ body {
 
 .hero-section h1 {
   color: #fff;
-  font-size: 70px;
+  font-size: 86px;
   font-weight: 700;
   line-height: normal;
-  max-width: 990px;
 }
 
 .hamburger {
@@ -133,16 +116,6 @@ body {
   height: 3px;
   background: #fff;
 }
-.navlinkss {
-  display: flex;
-  flex-direction: column;
-  gap: 28px;
-  align-items: anchor-center;
-  height: 187px;
-}
-
-
-
 
 .mobile-menu {
   position: fixed;
@@ -157,7 +130,6 @@ body {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  z-index: 111111;
 }
 
 .mobile-menu a {
@@ -201,7 +173,7 @@ body {
   background: rgba(241, 159, 25, 0.15);
   padding: 16px 18px;
   color: #3b3b3b;
-  font-size: 25px;
+  font-size: 38px;
   font-style: normal;
   font-weight: 400;
   font-family: gilory-semibold;
@@ -210,10 +182,10 @@ body {
 .about-all-content p {
   color: #777;
   text-align: center;
-  font-size: 21px;
+  font-size: 34px;
   font-style: normal;
   font-weight: 400;
-  line-height: 43px;
+  line-height: 56px;
   font-family: gilory;
 }
 
@@ -245,16 +217,12 @@ span.weeks {
   border-radius: 50px;
   background: #fff;
   box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.1);
-  padding: 14px 28px;
+  padding: 14px 35px;
   color: #777;
   font-family: "Bricolage Grotesque";
-  font-size: 16px;
+  font-size: 24px;
   font-style: normal;
   font-weight: 400;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-
 }
 .notedivs {
   display: flex;
@@ -322,25 +290,12 @@ button:hover {
   padding: 16px;
   border-radius: 70px;
   border: 1px solid #1af085;
-cursor: pointer;
+
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 17px;
 }
-.video-controls:hover {
-  background-color: #1af0856e;
-}
-
-
-
-.container {
-  position: relative; 
-
-}
-
-
-
 .mainfootervideo-contrls {
   display: flex;
   align-items: center;
@@ -418,35 +373,6 @@ p.content {
   gap: 10px;
   border: none;
   margin-top: 12px;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer;
-  box-shadow: 0px 4px 10px rgba(252, 207, 54, 0.4);
-}
-img.youtubeplaybtn {
-  width: 70px;
-  border-radius: 0 !important;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-24px, 3px);
-}
-
-.buttons:hover {
-  background: #ffb800;
-  transform: scale(1.05);
-  box-shadow: 0px 6px 15px rgba(252, 207, 54, 0.6);
-  color: #fff;
-}
-
-.header-buttonss.open-modal.mobile-resp {
-  padding: 14px;
-border-radius: 70px;
-background: #ff9f00;
-text-decoration: none;
-color: #fff;
-font-size: 18px;
-border: 1px solid #ff9f00;
-font-family: grifter !important;
 }
 
 .modal {
@@ -504,3 +430,205 @@ font-family: grifter !important;
   cursor: pointer;
 }
 
+@media (max-width: 1024px) {
+  .hero-section h1 {
+    font-size: 68px;
+  }
+ 
+
+  .main-div {
+    border-bottom-right-radius: 120px;
+    border-bottom-left-radius: 120px;
+  }
+  .notedivs {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media (max-width: 768px) {
+  .main-div {
+    border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+  }
+  .navlinks,
+  .header-button {
+    display: none;
+  }
+  .about-content {
+    margin-top: 30px;
+  }
+  .hero-section h1 {
+    font-size: 36px;
+  }
+  .hamburger {
+    display: flex;
+  }
+  .about-all-content p {
+    font-size: 18px;
+    line-height: 40px;
+  }
+
+  .about-extra-content h4 {
+    font-size: 18px;
+  }
+
+  .notediv {
+    font-size: 14px;
+  }
+
+  .about-content h5 {
+    font-size: 18px;
+  }
+
+  .video-controls {
+    padding: 7.735px;
+    border-radius: 33.84px;
+  }
+  .copyright-text p {
+    font-size: 12px;
+  }
+
+  #playButton,
+  #pauseButton {
+    margin: 0px;
+  }
+
+  .header-buttons a {
+    padding: 8.702px;
+    font-size: 14px;
+  }
+  p.content {
+    font-size: 12px;
+  }
+
+  .about-all-content h6 {
+    font-size: 22px;
+    padding: 7.268px 8.176px;
+  }
+
+  .about-content {
+    margin-bottom: 269px;
+  }
+
+  .main-footer-section {
+
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+  }
+  .youtubevideo img {
+    border-radius: 23px;
+  }
+}
+
+
+
+@media (max-width: 520px) {
+  .footer-section {
+    margin-top: 78px;
+  }
+  .about-content {
+    margin-bottom: 200px;
+  }
+
+  .video-controls p {
+    font-size: 12px;
+  }
+  .modal-content {
+    padding: 20px;
+  }
+
+  .input-group {
+    flex-direction: column;
+  }
+
+  div#modal {
+    padding: 14px;
+  }
+
+  .modal input,
+  .modal select {
+    height: 36.299px;
+    border-radius: 6.988px;
+    font-size: 12px;
+  }
+
+  .input-group {
+    gap: 0;
+  }
+
+  .modal-content {
+    border-radius: 13px;
+  }
+
+  .modal-content h2 {
+    margin-bottom: 15px;
+    font-size: 13.976px;
+  }
+
+  button.buttons {
+    padding: 7.92px 17.237px;
+    border-radius: 23.293px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 1094px) {
+    .main-footer-section {
+        height: 560px;
+    }
+}
+@media (max-width: 917px) {
+    .main-footer-section {
+        height: 447px;
+    }
+}
+
+@media (max-width: 774px) {
+    .main-footer-section {
+        height: 308px;
+    }
+}
+@media (max-width: 586px) {
+    .main-footer-section {
+        height: 283px;
+    }
+}
+@media (max-width: 420px) {
+    .controlsdiv {
+        gap:7px
+    }
+    .video-controls {
+        gap: 7px;
+    }
+
+}
+@media (max-width: 397px) {
+    .main-footer-section {
+        height: 228px;
+    }
+    .container {
+        padding: 15px;
+    }
+    .header-buttons a{
+        font-size:10px
+    }
+    
+    p.content {
+        font-size: 10px;
+    }
+    .video-controls p{
+        font-size:10px
+    }
+
+    .footer-section {
+        margin-top: 131px;
+    }
+    .about-content {
+        margin-bottom: 170px;
+    }
+    .copyright-text {
+        margin-top: 50px;
+    }
+    
+
+}
